--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-CLIENT_URL: "http://localhost:3000"
-SECRECT_KEY: "qwertyuiopasdfg"
+CLIENT_URL= "http://localhost:3000"
+SECRECT_KEY= "qwertyuiopasdfg"
