--- a/server/config/config.json
+++ b/server/config/config.json
@@ -6,7 +6,10 @@
     "host": "127.0.0.1",
     "port": 3308,
     "dialect": "mysql",
-    "logging": false
+    "logging": false,
+    "dialectOptions": {
+      "decimalNumbers": true
+    }
   },
   "test": {
     "username": "root",
