--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "sweetalert2": "^11.12.3",
     "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
